--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorBackgroundLight">#fffee9</color>
     <color name="colorBackgroundLightTwo">#ecf1ef</color>
     <color name="colorText">#ecf1ef</color>
-    <color name="colorHintText">#cacaca</color>
+    <color name="colorHintText">#dadada</color>
     <color name="colorHint">#a4a4a4</color>
     <color name="colorTextSelected">#F7B239</color>
     <color name="colorIcons">#435969</color>
