--- a/app/src/main/res/layout/list_item_backdrop_poster.xml
+++ b/app/src/main/res/layout/list_item_backdrop_poster.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        app:cardCornerRadius="6dp">
+        app:cardCornerRadius="5dp">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             <ImageView
                 android:id="@+id/item_backdrop_poster"
                 android:layout_width="match_parent"
-                android:layout_height="260dp"
+                android:layout_height="70dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:cropToPadding="false"
@@ -30,22 +30,46 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_gravity="bottom"
-                android:alpha="0.92"
-                android:paddingLeft="20dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:alpha="0.86"
                 android:background="@xml/rounded_corners_linear_layout"
                 android:backgroundTint="@color/colorPrimary"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:paddingLeft="20dp">
 
                 <TextView
                     android:id="@+id/backdrop_title"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|start"
                     android:textColor="@color/colorBackgroundLight"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/backdrop_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|left"
+                        android:textColor="@color/colorBackgroundLight"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/backdrop_info_record_studio"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|left"
+                        android:layout_weight="1"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="14sp" />
+                </LinearLayout>
             </LinearLayout>
         </FrameLayout>
     </android.support.v7.widget.CardView>
