--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="72dp"
-    android:background="@color/colorBackgroundDark"
-    android:textAlignment="gravity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/colorBackgroundDark"
+    app:cardCornerRadius="5dp"
+    android:layout_marginBottom="2dp"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
+    android:layout_marginTop="2dp">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/item_search_poster"
@@ -30,11 +38,11 @@
             android:id="@+id/item_search_sesion_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="4 сезон 20 серия"
             android:layout_marginLeft="12dp"
-            android:textAlignment="textStart"
             android:layout_weight="1"
+            android:textAlignment="textStart"
             android:textColor="@color/colorAccent"
             android:textSize="16sp" />
     </LinearLayout>
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
