--- a/app/src/main/res/values/material_search_to_line_attrs.xml
+++ b/app/src/main/res/values/material_search_to_line_attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="MaterialSearchToLine" >
+    <declare-styleable name="MaterialSearchBar" >
         <attr name="breadth" format="integer"  />
         <attr name="search_color" format="color" />
     </declare-styleable>
